# configurations

./: CMakeLists.txt  README.md  delldesktop.bashrc  dot.gitconfig  hosts.conf  install_powerline.sh  laptop.bashrc  main.bashrc
modulefiles/caffe_deps/: 1.14.stampede2.lua
modulefiles/cmake/: 3.20.bridges2.lua
modulefiles/devtools/: 1.lua
modulefiles/intel/: 18.0.2.example
myconfigs.d/: display.sh  wacom.sh
vim/: vimrc
